# 2048-rs

./: Cargo.toml  README.md
src/: direction.rs  game.rs  lib.rs  moves.rs  state.rs  storage.rs
